crates/structurizr-analysis/tests/snapshots/workspace_discovery__workspace_discovery@cycle.snap
---
source: crates/structurizr-analysis/tests/workspace_discovery.rs
expression: "WorkspaceView::from_facts(&facts, &fixture_root)"
---
WorkspaceView {
    documents: [
        WorkspaceDocumentView {
            path: "loop-a.dsl",
            kind: Fragment,
            discovered_by_scan: true,
            include_targets: [
                "\"loop-b.dsl\"",
            ],
            symbol_bindings: [
                "user",
            ],
        },
        WorkspaceDocumentView {
            path: "loop-b.dsl",
            kind: Fragment,
            discovered_by_scan: true,
            include_targets: [
                "\"loop-a.dsl\"",
            ],
            symbol_bindings: [
                "system",
            ],
        },
        WorkspaceDocumentView {
            path: "workspace.dsl",
            kind: Entry,
            discovered_by_scan: true,
            include_targets: [
                "\"loop-a.dsl\"",
            ],
            symbol_bindings: [],
        },
    ],
    includes: [
        WorkspaceIncludeView {
            including_document: "loop-a.dsl",
            raw_value: "\"loop-b.dsl\"",
            target_text: "loop-b.dsl",
            target: LocalFile {
                path: "loop-b.dsl",
            },
            discovered_documents: [
                "loop-b.dsl",
            ],
        },
        WorkspaceIncludeView {
            including_document: "loop-b.dsl",
            raw_value: "\"loop-a.dsl\"",
            target_text: "loop-a.dsl",
            target: LocalFile {
                path: "loop-a.dsl",
            },
            discovered_documents: [
                "loop-a.dsl",
            ],
        },
        WorkspaceIncludeView {
            including_document: "workspace.dsl",
            raw_value: "\"loop-a.dsl\"",
            target_text: "loop-a.dsl",
            target: LocalFile {
                path: "loop-a.dsl",
            },
            discovered_documents: [
                "loop-a.dsl",
            ],
        },
    ],
    diagnostics: [
        WorkspaceDiagnosticView {
            document: "loop-a.dsl",
            kind: IncludeCycle,
            message: "include cycle detected while following: loop-b.dsl",
            target_text: "loop-b.dsl",
            span: TextSpan {
                start_byte: 12,
                end_byte: 33,
                start_point: TextPoint {
                    row: 1,
                    column: 4,
                },
                end_point: TextPoint {
                    row: 1,
                    column: 25,
                },
            },
            value_span: TextSpan {
                start_byte: 21,
                end_byte: 33,
                start_point: TextPoint {
                    row: 1,
                    column: 13,
                },
                end_point: TextPoint {
                    row: 1,
                    column: 25,
                },
            },
        },
        WorkspaceDiagnosticView {
            document: "loop-b.dsl",
            kind: IncludeCycle,
            message: "include cycle detected while following: loop-a.dsl",
            target_text: "loop-a.dsl",
            span: TextSpan {
                start_byte: 12,
                end_byte: 33,
                start_point: TextPoint {
                    row: 1,
                    column: 4,
                },
                end_point: TextPoint {
                    row: 1,
                    column: 25,
                },
            },
            value_span: TextSpan {
                start_byte: 21,
                end_byte: 33,
                start_point: TextPoint {
                    row: 1,
                    column: 13,
                },
                end_point: TextPoint {
                    row: 1,
                    column: 25,
                },
            },
        },
    ],
}
