crates/structurizr-analysis/tests/snapshots/workspace_discovery__workspace_discovery@inherited_constants.snap
---
source: crates/structurizr-analysis/tests/workspace_discovery.rs
expression: "WorkspaceView::from_facts(&facts, &fixture_root)"
---
WorkspaceView {
    documents: [
        WorkspaceDocumentView {
            path: "alpha.dsl",
            kind: Entry,
            discovered_by_scan: true,
            include_targets: [
                "shared/system.dsl",
            ],
            symbol_bindings: [],
        },
        WorkspaceDocumentView {
            path: "beta.dsl",
            kind: Entry,
            discovered_by_scan: true,
            include_targets: [
                "shared/system.dsl",
            ],
            symbol_bindings: [],
        },
        WorkspaceDocumentView {
            path: "shared/details/alpha-details.dsl",
            kind: Fragment,
            discovered_by_scan: true,
            include_targets: [],
            symbol_bindings: [],
        },
        WorkspaceDocumentView {
            path: "shared/details/beta-details.dsl",
            kind: Fragment,
            discovered_by_scan: true,
            include_targets: [],
            symbol_bindings: [],
        },
        WorkspaceDocumentView {
            path: "shared/system.dsl",
            kind: Fragment,
            discovered_by_scan: true,
            include_targets: [
                "\"details/${DETAIL_FILE}\"",
            ],
            symbol_bindings: [
                "system",
            ],
        },
    ],
    includes: [
        WorkspaceIncludeView {
            including_document: "alpha.dsl",
            raw_value: "shared/system.dsl",
            target_text: "shared/system.dsl",
            target: LocalFile {
                path: "shared/system.dsl",
            },
            discovered_documents: [
                "shared/system.dsl",
            ],
        },
        WorkspaceIncludeView {
            including_document: "beta.dsl",
            raw_value: "shared/system.dsl",
            target_text: "shared/system.dsl",
            target: LocalFile {
                path: "shared/system.dsl",
            },
            discovered_documents: [
                "shared/system.dsl",
            ],
        },
        WorkspaceIncludeView {
            including_document: "shared/system.dsl",
            raw_value: "\"details/${DETAIL_FILE}\"",
            target_text: "details/alpha-details.dsl",
            target: LocalFile {
                path: "shared/details/alpha-details.dsl",
            },
            discovered_documents: [
                "shared/details/alpha-details.dsl",
            ],
        },
        WorkspaceIncludeView {
            including_document: "shared/system.dsl",
            raw_value: "\"details/${DETAIL_FILE}\"",
            target_text: "details/beta-details.dsl",
            target: LocalFile {
                path: "shared/details/beta-details.dsl",
            },
            discovered_documents: [
                "shared/details/beta-details.dsl",
            ],
        },
    ],
    diagnostics: [],
}
